# DataFileProcessor

./: CMakeLists.txt  README.md
data/: TestData.csv  TestData.json  data.json  randomData.csv  randomData.json
include/: CsvFileHandler.hpp  CsvFileHandlerCreator.hpp  FileHandler.hpp  FileHandlerCreator.hpp  JsonFileHandler.hpp  JsonFileHandlerCreator.hpp
src/: CsvFileHandler.cpp  JsonFileHandler.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
